Phase 6 Enhancement: Music Player and Playlist Improvements

--- a/public/index.html
+++ b/public/index.html
@@ -311,6 +311,11 @@
     </div>
   </div>
 
+  <!-- Room Playlist Container -->
+  <div id="playlistContainer" style="margin-top: 1rem; padding: 1rem; background: #111; border-radius: 8px; font-size: 0.9rem;">
+    <!-- Dynamic playlist items will appear here -->
+  </div>
+
   <!-- About Modal -->
   <div id="aboutModal" class="modal">
     <div class="modal-content">
